Fix bug #18872 - Improper handling of class constants used as default function argument values

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@131672 c90b9560-bf6c-de11-be94-00142212c4b1